# test-cmetadata

./: Cargo.toml  Dockerfile
.github/workflows/: ci.yml
cmetadata/: Cargo.toml
cmetadata/src/: lib.rs
with-workspace/cmetadata/src/: lib.rs
wo-workspace/: Cargo.toml
wo-workspace/.cargo/: config.toml
