[workspace]
members = ["cmetadata"]

resolver = "2"

[workspace.dependencies]
num-bigint = { version = "0.4.4", default-features = false }

[profile.release]
# This only affects the .elf output. Debug info is stripped from the final .bin.
# Paths to source code can still appear in the final bin, as they are part of the panic!() output.
debug = true

opt-level = 'z'
codegen-units = 1
panic = 'abort'
lto = true

[profile.dev]
opt-level = 'z'
